// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot when thread is null 1`] = `
<div
  className="random-thread-result"
  data-spec="random-thread-result"
>
  <p>
    Pick a random thread to respond to!
  </p>
</div>
`;

exports[`rendering snapshots should render valid snapshot with status 1`] = `
<div
  className="random-thread-result"
  data-spec="random-thread-result"
>
  <div>
    <p
      data-spec="random-thread-title"
    >
      <a
        href="testurl"
      >
        Test Title
         
        <i
          className="fas fa-external-link-alt"
        />
      </a>
    </p>
    <div
      className="small"
      data-spec="random-thread-subtitle"
    >
      Last Post by
       
      <a
        href="testurl"
      >
        blackjackkent
      </a>
    </div>
  </div>
</div>
`;

exports[`rendering snapshots should render valid snapshot without status 1`] = `
<div
  className="random-thread-result"
  data-spec="random-thread-result"
>
  <div>
    <p
      data-spec="random-thread-title"
    >
      Test Title
    </p>
    <div
      className="small"
      data-spec="random-thread-subtitle"
    >
      Awaiting Starter
    </div>
  </div>
</div>
`;
